# rusty-ray-tracing

./: Cargo.toml  LICENSE  README.md  build_for_web.sh  cargo_watch_web.sh
.github/workflows/: static.yml
assets/shaders/: simple.wgsl
pages/: index.html
pages/api/: wasm.js
pages/assets/shaders/: simple.wgsl
src/: bevy_menu.rs  camera.rs  collidables.rs  egui_menu.rs  main.rs  menu.rs  render.rs
